--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           WELCOME TO THE ROYAL KINGDOM OF COLCHIS
         </h1>
       </div>
-      <div>
+      <div class="about">
         <h2>About the Kingdom</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis
@@ -43,83 +43,46 @@
           quibusdam dolor saepe ipsam, sapiente sequi. Asperiores, voluptas
           consequatur quos odit nobis in obcaecati deleniti blanditiis, nostrum
           voluptatum exercitationem debitis dicta eos quo omnis, voluptates
-          placeat a. Vero magnam incidunt culpa? Tenetur dignissimos ducimus,
-          exercitationem cupiditate ex rem consequatur cum. Aut suscipit dolor
-          modi consequatur fugiat itaque, velit omnis, dolorem qui, quae
-          repellendus repellat nobis! Aut, atque! Corrupti beatae nam, quia qui
-          natus ut exercitationem doloremque impedit nobis atque pariatur
-          suscipit illo architecto at molestiae velit necessitatibus libero
-          blanditiis quo.
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae culpa
-          atque ipsam totam inventore veniam, perspiciatis aperiam deserunt
-          debitis optio officia necessitatibus voluptates esse soluta rem neque
-          consequatur porro accusantium. Itaque nemo delectus optio, quasi
-          minima nesciunt veniam quae odit, quos perspiciatis expedita sed
-          cupiditate. Quidem dolores ab sit iste expedita labore eos accusantium
-          quibusdam incidunt facere necessitatibus, sunt maiores. Facere
-          nesciunt dolorem sint quasi architecto ea facilis, dolores eius.
-          Fugiat, consectetur totam qui quaerat dolorum maxime earum
-          voluptatibus nisi dignissimos rem reiciendis animi repudiandae ad ab
-          suscipit culpa veritatis? Iure assumenda cum accusantium ut numquam
-          voluptates reprehenderit est? Quasi maiores harum delectus repellat
-          neque sunt illo autem molestias fugiat, quos expedita nihil, magni
-          minima pariatur officiis vero tempora? Beatae? Error ratione incidunt
-          quo nobis corrupti eaque quam dolorem qui repellat similique animi
-          corporis temporibus rerum nam id non sed nihil, nostrum voluptatem
-          voluptatum ullam. Inventore laboriosam provident eum eaque. Dolorem
-          est adipisci nobis illum assumenda iure rem quidem rerum repellendus
-          alias sed facilis aperiam fugit tempore hic, repellat vero quas nihil!
+          placeat a.
         </p>
       </div>
-      <section id="event">
+    </section>
+    <section id="event">
+      <div class="soon">
         <h2>Comming soon : Javelin Event !!!</h2>
-        <article>
-          <div class="img-article">
-            <img src="assets/javelin.jpg" alt="Javelin" />
-          </div>
-          <div class="text-article">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quos
-              velit nam tempora? Numquam dolorum placeat sed porro ipsam nulla
-              natus, eos ratione ad hic ducimus labore cum, pariatur doloribus?
-              Quas exercitationem corrupti molestias nam dicta ex magni
-              repellendus ducimus! Perferendis illo obcaecati esse excepturi
-              quia aperiam omnis ullam sed rerum eum error vitae sapiente, amet
-              culpa labore cumque laborum? Tempora totam cumque libero quas.
-              Animi aut iure, mollitia fugiat eligendi voluptas dolor quam
-              architecto tempora quo ullam, illum deleniti, tenetur
-              reprehenderit? Quo sapiente consequuntur perferendis nulla nobis
-              tenetur laboriosam! Ut laboriosam tempora nobis iusto sunt? Ut
-              dignissimos placeat architecto vel aliquam id, quod nisi et ipsam
-              harum debitis eum. Quasi ullam exercitationem totam voluptates quo
-              suscipit libero voluptatum in. Esse suscipit quaerat minima
-              voluptatum et ullam nisi expedita illo aspernatur exercitationem
-              alias non aliquam, asperiores deserunt qui sit deleniti eaque
-              eveniet. Reiciendis, quidem. Eaque provident explicabo earum
-              laboriosam vitae. Eveniet non minima quis tempore unde odio earum
-              quaerat modi hic eum vero magni in cumque nobis nemo accusamus, id
-              maiores harum illum. Libero laborum quo suscipit quibusdam quod a.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates rem quam quae dolorem, unde deleniti culpa nemo,
-              doloribus voluptate odit a reprehenderit quisquam eos beatae
-              consequuntur? Molestiae nihil earum tempore! Inventore tempora
-              molestias perferendis voluptatibus iure dolor culpa non quia.
-              Iusto fugiat voluptatem corporis amet. Reiciendis, sequi magni
-              suscipit pariatur odio fugiat fuga dolore minus, possimus ad quo
-              vel dignissimos. Explicabo cum iste voluptates, magni pariatur
-              eveniet, illum veniam fugit excepturi omnis nesciunt maiores
-              aperiam corporis odit natus numquam earum nulla neque ullam quasi
-              eligendi vitae at? At, saepe facilis! Voluptates similique, quidem
-              eveniet culpa non nam perferendis eligendi rerum, sapiente
-              voluptatum sed veritatis libero fugit repellendus odit vero minima
-              soluta minus! Nostrum maiores commodi cupiditate cumque doloremque
-              quidem dolore.
-            </p>
-          </div>
-        </article>
-      </section>
+        <div class="javelin">
+          <img src="assets/javelin.jpg" alt="Javelin" />
+        </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel quos
+            velit nam tempora? Numquam dolorum placeat sed porro ipsam nulla
+            natus, eos ratione ad hic ducimus labore cum, pariatur doloribus?
+            Quas exercitationem corrupti molestias nam dicta ex magni
+            repellendus ducimus! Perferendis illo obcaecati esse excepturi quia
+            aperiam omnis ullam sed rerum eum error vitae sapiente, amet culpa
+            labore cumque laborum? Tempora totam cumque libero quas. Animi aut
+            iure, mollitia fugiat eligendi voluptas dolor quam architecto
+            tempora quo ullam, illum deleniti, tenetur reprehenderit? Quo
+            sapiente consequuntur perferendis nulla nobis tenetur laboriosam! Ut
+            laboriosam tempora nobis iusto sunt? Ut dignissimos placeat
+            architecto vel aliquam id, quod nisi et ipsam harum debitis eum.
+          </p>
+        </div>
+      </div>
+      <div class="news">
+        <h2>Breaking News ! : Jason wants to drop us our golden fleece</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis
+          ducimus possimus, voluptatibus fugit fugiat voluptates deleniti?
+          Cumque, natus mollitia deleniti quos esse, neque magni, maxime iure
+          harum ab perspiciatis reprehenderit. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Corrupti veniam quam quia ullam delectus
+          aperiam voluptatibus ad explicabo autem a dolorem, sit ipsam, maxime
+          fugit iure sequi velit, cum eius?
+        </p>
+        <img src="assets/sheep.png" alt="" />
+      </div>
     </section>
     <footer><img src="assets/coat-of-arms.png" alt="coat-of-arms" /></footer>
   </body>
