--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,6 @@
     </section>
 
     <!-- Connect the Javascript file -->
-    <script src="#"></script>
+    <script src="script.js"></script>
   </body>
 </html>
