add footer for all

--- a/assets.html
+++ b/assets.html
@@ -97,5 +97,8 @@
         </tbody>
       </table>
     </section>
+    <footer>
+      <img src="assets/coat-of-arms.png" alt="coat-of-arms" />
+    </footer>
   </body>
 </html>
