--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,9 @@
         <img src="assets/cat-typing.gif" alt="chat" />
       </div>
     </section>
+    <footer>
+      <img src="assets/coat-of-arms.png" alt="coat-of-arms" />
+    </footer>
     <!-- Connect the Javascript file -->
   </body>
 </html>
