--- a/royal-family.html
+++ b/royal-family.html
@@ -38,5 +38,8 @@
         </div>
       </div>
     </section>
+    <footer>
+      <img src="assets/coat-of-arms.png" alt="coat-of-arms" />
+    </footer>
   </body>
 </html>
