--- a/royal-family.html
+++ b/royal-family.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,22 +24,20 @@
     <section id="family">
       <h2>The Royal Family :</h2>
       <div class="pictures">
-        <div>
+        <div class="members">
           <img src="assets/king.png" alt="" />
-          <p>King Aeetes</p>
+          <p class="name">King Aeetes</p>
         </div>
-        <div>
+        <div class="members">
           <img src="assets/princess.png" alt="" />
-          <p>Princess Medea</p>
+          <p class="name">Princess Medea</p>
         </div>
-        <div>
+        <div class="members">
           <img src="assets/queen.png" alt="" />
-          <p>Queen Idyia</p>
+          <p class="name">Queen Idyia</p>
         </div>
       </div>
     </section>
-    <footer>
-      <img src="assets/coat-of-arms.png" alt="coat-of-arms" />
-    </footer>
+    <footer><img src="assets/coat-of-arms.png" alt="coat-of-arms" /></footer>
   </body>
 </html>
