--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
@@ -19,7 +19,6 @@
         </ul>
       </nav>
     </header>
-
     <!-- Hero Section -->
     <section id="hero">
       <div class="welcome">
