--- a/assets.html
+++ b/assets.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Navigation Section-->
     <header>
-      <img src="/assets/logo.png" alt="royal logo" />
+      <img src="assets/logo.png" alt="royal logo" />
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -22,9 +22,7 @@
     </header>
     <!-- Kingdom's Royal Assets  -->
     <section id="assets">
-      <h2>
-        The Kingdom's Royal Assets :
-      </h2>
+      <h2>The Kingdom's Royal Assets :</h2>
       <table>
         <thead>
           <tr>
