--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <body>
     <!-- Navigation Section-->
     <header>
-      <img src="/assets/logo.png" alt="royal logo" />
+      <img src="assets/logo.png" alt="royal logo" />
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -23,9 +23,7 @@
     </header>
     <!-- Contact the Royal Kingdom -->
     <section id="contact">
-      <h2>
-        Fill in the form below to contact the Royal Kingdom !
-      </h2>
+      <h2>Fill in the form below to contact the Royal Kingdom !</h2>
       <div class="contact-body">
         <form id="contactForm">
           <label for="firstname">Firstname :</label><br />
