--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Navigation Section-->
     <header>
-      <img src="/assets/logo.png" alt="royal logo" />
+      <img src="assets/logo.png" alt="royal logo" />
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -22,9 +22,7 @@
     <!-- Hero Section -->
     <section id="hero">
       <div class="welcome">
-        <h1>
-          WELCOME TO THE ROYAL KINGDOM OF COLCHIS
-        </h1>
+        <h1>WELCOME TO THE ROYAL KINGDOM OF COLCHIS</h1>
       </div>
       <div class="about">
         <h2>About the Kingdom</h2>
