--- a/royal-family.html
+++ b/royal-family.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Navigation Section-->
     <header>
-      <img src="/assets/logo.png" alt="royal logo" />
+      <img src="assets/logo.png" alt="royal logo" />
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
