--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="royal-family.html">Royal Family</a></li>
-          <li><a href="royal-assets.html">Royal Assets</a></li>
+          <li><a href="assets.html">Royal Assets</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
